rebpf/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub const _STDINT_H: u32 = 1;
pub const _FEATURES_H: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const __GLIBC_USE_ISOC2Y: u32 = 0;
pub const __GLIBC_USE_ISOC23: u32 = 0;
pub const __USE_ISOC11: u32 = 1;
pub const __USE_ISOC99: u32 = 1;
pub const __USE_ISOC95: u32 = 1;
pub const __USE_POSIX_IMPLICITLY: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const __USE_POSIX: u32 = 1;
pub const __USE_POSIX2: u32 = 1;
pub const __USE_POSIX199309: u32 = 1;
pub const __USE_POSIX199506: u32 = 1;
pub const __USE_XOPEN2K: u32 = 1;
pub const __USE_XOPEN2K8: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const __WORDSIZE: u32 = 64;
pub const __WORDSIZE_TIME64_COMPAT32: u32 = 1;
pub const __SYSCALL_WORDSIZE: u32 = 64;
pub const __TIMESIZE: u32 = 64;
pub const __USE_TIME_BITS64: u32 = 1;
pub const __USE_MISC: u32 = 1;
pub const __USE_ATFILE: u32 = 1;
pub const __USE_FORTIFY_LEVEL: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_GETS: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_SCANF: u32 = 0;
pub const __GLIBC_USE_C23_STRTOL: u32 = 0;
pub const _STDC_PREDEF_H: u32 = 1;
pub const __STDC_IEC_559__: u32 = 1;
pub const __STDC_IEC_60559_BFP__: u32 = 201404;
pub const __STDC_IEC_559_COMPLEX__: u32 = 1;
pub const __STDC_IEC_60559_COMPLEX__: u32 = 201404;
pub const __STDC_ISO_10646__: u32 = 201706;
pub const __GNU_LIBRARY__: u32 = 6;
pub const __GLIBC__: u32 = 2;
pub const __GLIBC_MINOR__: u32 = 42;
pub const _SYS_CDEFS_H: u32 = 1;
pub const __glibc_c99_flexarr_available: u32 = 1;
pub const __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI: u32 = 0;
pub const __HAVE_GENERIC_SELECTION: u32 = 1;
pub const __GLIBC_USE_LIB_EXT2: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT_C23: u32 = 0;
pub const __GLIBC_USE_IEC_60559_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT_C23: u32 = 0;
pub const __GLIBC_USE_IEC_60559_TYPES_EXT: u32 = 0;
pub const _BITS_TYPES_H: u32 = 1;
pub const _BITS_TYPESIZES_H: u32 = 1;
pub const __OFF_T_MATCHES_OFF64_T: u32 = 1;
pub const __INO_T_MATCHES_INO64_T: u32 = 1;
pub const __RLIM_T_MATCHES_RLIM64_T: u32 = 1;
pub const __STATFS_MATCHES_STATFS64: u32 = 1;
pub const __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64: u32 = 1;
pub const __FD_SETSIZE: u32 = 1024;
pub const _BITS_TIME64_H: u32 = 1;
pub const _BITS_WCHAR_H: u32 = 1;
pub const _BITS_STDINT_INTN_H: u32 = 1;
pub const _BITS_STDINT_UINTN_H: u32 = 1;
pub const _BITS_STDINT_LEAST_H: u32 = 1;
pub const INT8_MIN: i32 = -128;
pub const INT16_MIN: i32 = -32768;
pub const INT32_MIN: i32 = -2147483648;
pub const INT8_MAX: u32 = 127;
pub const INT16_MAX: u32 = 32767;
pub const INT32_MAX: u32 = 2147483647;
pub const UINT8_MAX: u32 = 255;
pub const UINT16_MAX: u32 = 65535;
pub const UINT32_MAX: u32 = 4294967295;
pub const INT_LEAST8_MIN: i32 = -128;
pub const INT_LEAST16_MIN: i32 = -32768;
pub const INT_LEAST32_MIN: i32 = -2147483648;
pub const INT_LEAST8_MAX: u32 = 127;
pub const INT_LEAST16_MAX: u32 = 32767;
pub const INT_LEAST32_MAX: u32 = 2147483647;
pub const UINT_LEAST8_MAX: u32 = 255;
pub const UINT_LEAST16_MAX: u32 = 65535;
pub const UINT_LEAST32_MAX: u32 = 4294967295;
pub const INT_FAST8_MIN: i32 = -128;
pub const INT_FAST16_MIN: i64 = -9223372036854775808;
pub const INT_FAST32_MIN: i64 = -9223372036854775808;
pub const INT_FAST8_MAX: u32 = 127;
pub const INT_FAST16_MAX: u64 = 9223372036854775807;
pub const INT_FAST32_MAX: u64 = 9223372036854775807;
pub const UINT_FAST8_MAX: u32 = 255;
pub const UINT_FAST16_MAX: i32 = -1;
pub const UINT_FAST32_MAX: i32 = -1;
pub const INTPTR_MIN: i64 = -9223372036854775808;
pub const INTPTR_MAX: u64 = 9223372036854775807;
pub const UINTPTR_MAX: i32 = -1;
pub const PTRDIFF_MIN: i64 = -9223372036854775808;
pub const PTRDIFF_MAX: u64 = 9223372036854775807;
pub const SIG_ATOMIC_MIN: i32 = -2147483648;
pub const SIG_ATOMIC_MAX: u32 = 2147483647;
pub const SIZE_MAX: i32 = -1;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 4294967295;
pub const DESCEND_MAX: u32 = 1024;
pub const MATCHES_BUF_MAX: u32 = 128;
pub const STRINGS_BUF_MAX: u32 = 4096;
pub const DNS_PORT: u32 = 53;
pub const PATH_MAX: u32 = 4096;
pub const TASK_CACHE_MAX: u32 = 1024;
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __fsid_t"][::std::mem::size_of::<__fsid_t>() - 8usize];
    ["Alignment of __fsid_t"][::std::mem::align_of::<__fsid_t>() - 4usize];
    ["Offset of field: __fsid_t::__val"][::std::mem::offset_of!(__fsid_t, __val) - 0usize];
};
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::std::mem::size_of::<max_align_t>() - 32usize];
    ["Alignment of max_align_t"][::std::mem::align_of::<max_align_t>() - 16usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 16usize];
};
pub type u64_ = u64;
pub type u32_ = u32;
pub type u16_ = u16;
pub type u8_ = u8;
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum MatchKind {
    MATCH_KIND_INVAL = 0,
    MATCH_KIND_BASENAME = 1,
    MATCH_KIND_FULL = 2,
    MATCH_KIND_SUBSTR = 3,
    MATCH_KIND_PREFIX = 4,
    __MATCH_KIND_MAX = 5,
}
unsafe extern "C" {
    pub static mut MATCH_KIND_STRINGS: [*const ::std::os::raw::c_char; 6usize];
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum MatchDir {
    MATCH_DIR_INVAL = 0,
    MATCH_DIR_REDIRECT = 1,
    MATCH_DIR_BYPASS = 2,
}
unsafe extern "C" {
    pub static mut MATCH_DIR_STRINGS: [*const ::std::os::raw::c_char; 4usize];
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MatchStr {
    pub kind: MatchKind,
    pub dir: MatchDir,
    pub uid: u32_,
    pub pat: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of MatchStr"][::std::mem::size_of::<MatchStr>() - 16usize];
    ["Alignment of MatchStr"][::std::mem::align_of::<MatchStr>() - 8usize];
    ["Offset of field: MatchStr::kind"][::std::mem::offset_of!(MatchStr, kind) - 0usize];
    ["Offset of field: MatchStr::dir"][::std::mem::offset_of!(MatchStr, dir) - 1usize];
    ["Offset of field: MatchStr::uid"][::std::mem::offset_of!(MatchStr, uid) - 4usize];
    ["Offset of field: MatchStr::pat"][::std::mem::offset_of!(MatchStr, pat) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Match {
    pub kind: u8_,
    pub dir: u8_,
    pub uid: u32_,
    pub pat_off: u32_,
    pub pat_len: u32_,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Match"][::std::mem::size_of::<Match>() - 16usize];
    ["Alignment of Match"][::std::mem::align_of::<Match>() - 4usize];
    ["Offset of field: Match::kind"][::std::mem::offset_of!(Match, kind) - 0usize];
    ["Offset of field: Match::dir"][::std::mem::offset_of!(Match, dir) - 1usize];
    ["Offset of field: Match::uid"][::std::mem::offset_of!(Match, uid) - 4usize];
    ["Offset of field: Match::pat_off"][::std::mem::offset_of!(Match, pat_off) - 8usize];
    ["Offset of field: Match::pat_len"][::std::mem::offset_of!(Match, pat_len) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BpfConfig {
    pub enable: bool,
    pub enable_dns: bool,
    pub check_parents: bool,
    pub mark: u32_,
    pub nmatches: u32_,
    pub strings_len: u32_,
    pub matches: *mut MatchStr,
    pub generation: u64_,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BpfConfig"][::std::mem::size_of::<BpfConfig>() - 32usize];
    ["Alignment of BpfConfig"][::std::mem::align_of::<BpfConfig>() - 8usize];
    ["Offset of field: BpfConfig::enable"][::std::mem::offset_of!(BpfConfig, enable) - 0usize];
    ["Offset of field: BpfConfig::enable_dns"]
        [::std::mem::offset_of!(BpfConfig, enable_dns) - 1usize];
    ["Offset of field: BpfConfig::check_parents"]
        [::std::mem::offset_of!(BpfConfig, check_parents) - 2usize];
    ["Offset of field: BpfConfig::mark"][::std::mem::offset_of!(BpfConfig, mark) - 4usize];
    ["Offset of field: BpfConfig::nmatches"][::std::mem::offset_of!(BpfConfig, nmatches) - 8usize];
    ["Offset of field: BpfConfig::strings_len"]
        [::std::mem::offset_of!(BpfConfig, strings_len) - 12usize];
    ["Offset of field: BpfConfig::matches"][::std::mem::offset_of!(BpfConfig, matches) - 16usize];
    ["Offset of field: BpfConfig::generation"]
        [::std::mem::offset_of!(BpfConfig, generation) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProcFdEntry {
    pub pid: u64_,
    pub start_boottime: u64_,
    pub fd: u32_,
    pub _pad: u32_,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ProcFdEntry"][::std::mem::size_of::<ProcFdEntry>() - 24usize];
    ["Alignment of ProcFdEntry"][::std::mem::align_of::<ProcFdEntry>() - 8usize];
    ["Offset of field: ProcFdEntry::pid"][::std::mem::offset_of!(ProcFdEntry, pid) - 0usize];
    ["Offset of field: ProcFdEntry::start_boottime"]
        [::std::mem::offset_of!(ProcFdEntry, start_boottime) - 8usize];
    ["Offset of field: ProcFdEntry::fd"][::std::mem::offset_of!(ProcFdEntry, fd) - 16usize];
    ["Offset of field: ProcFdEntry::_pad"][::std::mem::offset_of!(ProcFdEntry, _pad) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TaskId {
    pub pid: u64_,
    pub time: u64_,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TaskId"][::std::mem::size_of::<TaskId>() - 16usize];
    ["Alignment of TaskId"][::std::mem::align_of::<TaskId>() - 8usize];
    ["Offset of field: TaskId::pid"][::std::mem::offset_of!(TaskId, pid) - 0usize];
    ["Offset of field: TaskId::time"][::std::mem::offset_of!(TaskId, time) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Dump {
    pub task_keys: [TaskId; 1024usize],
    pub task_vals: [bool; 1024usize],
    pub task_len: u64_,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Dump"][::std::mem::size_of::<Dump>() - 17416usize];
    ["Alignment of Dump"][::std::mem::align_of::<Dump>() - 8usize];
    ["Offset of field: Dump::task_keys"][::std::mem::offset_of!(Dump, task_keys) - 0usize];
    ["Offset of field: Dump::task_vals"][::std::mem::offset_of!(Dump, task_vals) - 16384usize];
    ["Offset of field: Dump::task_len"][::std::mem::offset_of!(Dump, task_len) - 17408usize];
};
unsafe extern "C" {
    pub fn bpf_drop_caps();
}
unsafe extern "C" {
    pub fn bpf_init();
}
unsafe extern "C" {
    pub fn bpf_reload_config(conf: *mut BpfConfig) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bpf_get_proc_names(
        ptr: *mut *mut ::std::os::raw::c_char,
        len: *mut u64_,
        cap: *mut u64_,
    );
}
unsafe extern "C" {
    pub fn bpf_get_dump(dump: *mut Dump);
}
unsafe extern "C" {
    pub fn bpf_run_dns_ringbuf(
        callback: ::std::option::Option<
            unsafe extern "C" fn(
                ctx: *mut ::std::os::raw::c_void,
                data: *mut ::std::os::raw::c_void,
                data_sz: usize,
            ) -> ::std::os::raw::c_int,
        >,
        ctx: *mut ::std::os::raw::c_void,
    );
}